# wartable

./: CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  deploy.sh  docker-compose.yml  wartable.service
channel/: package-lock.json  package.json  wartable-channel.ts
dashboard/: app.js  index.html  style.css
src/: api.rs  config.rs  download.rs  events.rs  keys.rs  main.rs  models.rs  server.rs
src/mcp/: mod.rs  tools.rs
src/scheduler/: mod.rs  queue.rs
src/worker/: mod.rs  process.rs
